Replace new `String(Files.readAllBytes(variable), UTF_8)` with `Files.readString(variable)`